syntax = "proto3";

option go_package = "github.com/elap5e/penguin/daemon/message/pb";

// Message generated by proto-message-gen. DO NOT EDIT.
// source: tencent.p1298im.s2c.msgtype0x210.submsgtype0x1a.MsgBody
//
// SubMsgType0x1a is the message type for the SubMsgType0x1a.
message SubMsgType0x1a {
  // MsgBody is the message type for the MsgBody.
  message MsgBody {
    bytes file_key       = 1; // bytes_file_key
    uint32 from_uin      = 2; // uint32_from_uin
    uint32 to_uin        = 3; // uint32_to_uin
    uint32 status        = 4; // uint32_status
    uint32 ttl           = 5; // uint32_ttl
    string desc          = 6; // string_desc
    uint32 type          = 7; // uint32_type
    uint32 capture_times = 8; // uint32_capture_times
    uint64 from_uin_64   = 9; // uint64_from_uin
    uint64 to_uin_64     = 10; // uint64_to_uin
  }
}